# spacey-launch-cost-prediction

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: data_catalog.md  index.md
notebooks/: 1.0-spacex-data-collection-api-v2.ipynb  1.1-spacex-web-scrapping.ipynb  2.0-spacex-data-preparation.ipynb  3.0-spacex-eda.ipynb  rc-data-colletion.ipynb  spacex-data-collection-api-v2.ipynb  spacex-data-wrangling.ipynb  spacex-eda-dataviz-v2.ipynb  spacex-modeling.ipynb  spacex-web-scrapping.ipynb
src/: spacex_dashboard_plotly.py
